# mygit

./: .clang-format  .gitignore  CMakeLists.txt  README.md  importantNotes.md
.github/workflows/: ci.yml
include/: commands.h  config_parser.hpp  file_compress.h  git_object.hpp  init.h  repo.h  sha256.h  status.hpp  utils.h
src/: commands.cpp  config_parser.cpp  file_compress.c  git_object.cpp  init.cpp  main.cpp  repo.cpp  sha256.cpp  status.cpp  utils.cpp
test/: basic_test.cpp  test.h
